--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
     <head>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0" lang="es"/>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/dark.css">
@@ -7,6 +8,9 @@
     </head>
 
     <body>
-        
+        <h1>Hola a todos. Me llamo Claudio, y este es mi portafolio.</h1>
+        <p>Aquí veréis todo mi trayecto que vaya publicando sobre mi trayectoria y conocimientos en la programación y mis proyectos</p>
+        <p><a href="https://github.com/ClaudioDragomir0">Mi perfil de GitHub</a></p>
     </body>
+
 </html>
