--- a/index.html
+++ b/index.html
@@ -8,9 +8,21 @@
     </head>
 
     <body>
+
         <h1>Hola a todos. Me llamo Claudio, y este es mi portafolio.</h1>
+
         <p>Aquí veréis todo mi trayecto que vaya publicando sobre mi trayectoria y conocimientos en la programación y mis proyectos</p>
+
         <p><a href="https://github.com/ClaudioDragomir0">Mi perfil de GitHub</a></p>
+
+        <nav>
+            <ul>
+                <li><a href="#acerca-de">Acerca de</a></li>   
+                <li><a href="#tecnologias">Tecnologías</a></li>
+                <li><a href="#contacto">Contacto</a></li>
+            </ul>
+        </nav>
+
     </body>
 
 </html>
