--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
 
     <body>
 
-        <h1>Hola a todos. Me llamo Claudio, y este es mi portafolio.</h1>
+        <header>
 
-        <p>Aquí veréis todo mi trayecto que vaya publicando sobre mi trayectoria y conocimientos en la programación y mis proyectos</p>
+            <h1>Hola a todos. Me llamo Claudio, y este es mi portafolio.</h1>
 
-        <p><a href="https://github.com/ClaudioDragomir0">Mi perfil de GitHub</a></p>
+            <p>Aquí veréis todo mi trayecto que vaya publicando sobre mi trayectoria y conocimientos en la programación y mis proyectos</p>
+
+            <p><a href="https://github.com/ClaudioDragomir0">Mi perfil de GitHub</a></p>
+
+        </header>
 
         <nav>
             <ul>
