--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 
         <nav>
             <ul>
-                <li><a href="#acerca-de">Acerca de</a></li>   
+                <li><a href="#acerca-de">Acerca de</a></li>
+                <li><a href="#proyectos">Acerca de</a></li>   
                 <li><a href="#tecnologias">Tecnologías</a></li>
                 <li><a href="#contacto">Contacto</a></li>
             </ul>
