--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
         <footer>
 
-            <p>ClaudioDragomir0, 2025</p>
+            <p>&copy; ClaudioDragomir0, 2025</p>
             
         </footer>
 
